fix: wrap .details-container for .about-containers class

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -98,4 +98,8 @@
     .text-container {
         text-align: justify;
     }
+    .details-container {
+    flex: 1 1 300px;
+    max-width: 100%;
+}
 }
